--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
     <input class="form-control" type="text" name="search" [(ngModel)]="filter"> 
 </nav>
 
+<button id = 'teste' (click)= order()> Ordernar lista </button> 
+
 <div>
   <tr> 
     <td>ID</td>
